# nlp-sql-generator-crewai

dataset_small/: load_dept_emp.sql
query_generator/: README.md  pyproject.toml
query_generator/src/query_generator/: frontend.py  main.py
query_generator/src/query_generator/crews/query_crew/: generate_query_crew.py
query_generator/src/query_generator/crews/query_crew/config/: agents.yaml  tasks.yaml
query_generator/src/query_generator/tools/: custom_tool.py
